--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@sanity/client": "^5.2.2",
+    "next-sanity": "^4.1.5",
+    "next-sanity-image": "^5.0.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
